# libcarddav

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  TODO  config.h.in  configure.ac  libcarddav.pc.in  version.sh
src/: Makefile.am  Makefile.in  add-carddav-object.c  add-carddav-object.h  carddav-utils.c  carddav-utils.h  carddav.c  carddav.h  delete-carddav-object.c  delete-carddav-object.h  get-carddav-report.c  get-carddav-report.h  get-display-name.c  get-display-name.h  lock-carddav-object.c  lock-carddav-object.h  md5.c  md5.h  modify-carddav-object.c  modify-carddav-object.h  options-carddav-server.c  options-carddav-server.h
